--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ header {
     flex: 1;
     align-items: center;
     justify-content: flex-start;
-    font-size: 25px;
+    font-size: 1.5em;
     color: rgb(255, 255, 255);
 }
 
@@ -53,7 +53,7 @@ nav {
 
 .nav-link {
     color: rgb(255, 255, 255);
-    font-size: 25px;
+    font-size: 1.5em;
     letter-spacing: 2px;
     margin: 0 20px;
 }
@@ -112,15 +112,11 @@ nav {
 @media screen and (max-width: 1080px) {
     body {
         display: grid;
-        height: 100vh;
-        width: 100%;
-        max-width: 75%;
+
         margin: auto;
     }
 
     header {
-        width: 100%;
-        max-width: 75%;
         margin: auto;
         margin-bottom: -15px;
         display: grid;
@@ -153,5 +149,9 @@ nav {
 
     .logo-container {
         grid-column: 1/3;
+    }
+    .gallery {
+        width: auto;
+        padding: 0;
     }
 }
